k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: docker.io/fullzer4/frontend_ai_realtime_pong:latest
        ports:
          - containerPort: 8001
        resources:
          requests:
            cpu: "3"
            memory: "4Gi"
          limits:
            cpu: "6"
            memory: "8Gi"
